--- a/login.html
+++ b/login.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="loginstyle.css"/>
+    <script type = "module" defer src="register.js"></script>
+
+
 </head>
+
 <body>
     
     <div id="createback">
 <p id="cretitle">Create Account</p>
 <p id="emailtext">Email</p>
-<input id="emailinput" type="text">
+<input id="email" type="text" placeholder="Email">
 <p id="passtext">Password</p>
-<input id="passinput" type="text">
+<input id="pass" type="text" placeholder="Password">
 
-<button id="createacc">Create Account</button>
+<button id="submit" type="submit">Create Account</button>
 
 <button id="gitcreate">Github</button>
 <button id="goocreate">Google</button>
