--- a/signup.html
+++ b/signup.html
@@ -1,11 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="loginstyle.css"/>
-    <script type = "module" defer src="login.js"></script>
+    <link rel="stylesheet" href="signstyle.css"/>
+    <script type = "module" defer src="register.js"></script>
 
 
 </head>
@@ -13,19 +14,20 @@
 <body>
     
     <div id="createback">
-<p id="cretitle">Login</p>
+<p id="cretitle">Create Account</p>
 <p id="emailtext">Email</p>
 <input id="email" type="text" placeholder="Email">
 <p id="passtext">Password</p>
 <input id="pass" type="text" placeholder="Password">
 
-<button id="submit" type="submit">Login</button>
+<button id="submit" type="submit">Create Account</button>
 
 <button id="gitcreate">Github</button>
 <button id="goocreate">Google</button>
 
-
+<p id="loginoki">Already have an account? Login <a href="login.html">Here</a></p>
     </div>
     
 </body>
 </html>
+
