--- a/login.html
+++ b/login.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+     <nav id="nav">
+        <p id="navtitle">MyTasks</p>
+    </nav>
     
     <div id="createback">
 <p id="cretitle">Login</p>
@@ -21,9 +24,8 @@
 
 <button id="submit" type="submit">Login</button>
 
-<button id="gitcreate">Github</button>
-<button id="goocreate">Google</button>
 
+<p id="loginoki">Dont have an account? Sign up <a href="signup.html">Here</a></p>
 
     </div>
     
