--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+
+    <nav id="nav">
+        <p id="navtitle">MyTasks</p>
+    </nav>
     
     <div id="createback">
 <p id="cretitle">Create Account</p>
@@ -22,8 +26,7 @@
 
 <button id="submit" type="submit">Create Account</button>
 
-<button id="gitcreate">Github</button>
-<button id="goocreate">Google</button>
+
 
 <p id="loginoki">Already have an account? Login <a href="login.html">Here</a></p>
     </div>
