--- a/login.html
+++ b/login.html
@@ -20,12 +20,25 @@
 <p id="emailtext">Email</p>
 <input id="email" type="text" placeholder="Email">
 <p id="passtext">Password</p>
-<input id="pass" type="text" placeholder="Password">
+<input id="pass" type="password" placeholder="Password">
 
 <button id="submit" type="submit">Login</button>
 
 
+
+
+
 <p id="loginoki">Dont have an account? Sign up <a href="signup.html">Here</a></p>
+
+
+
+<p id="namefirst">First Name</p>
+<input id="firstname" type = "text">
+<p id="namelast" Last Name</p>
+<input id="lastname" type = "text">
+<p id="namelast" Age</p>
+<input id="lastname" type = "number">
+<button id="finalinfo">Finish</button>
 
     </div>
     
