--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
 <p id="emailtext">Email</p>
 <input id="email" type="text" placeholder="Email">
 <p id="passtext">Password</p>
-<input id="pass" type="text" placeholder="Password">
+<input id="pass" type="password" placeholder="Password">
 
 <button id="submit" type="submit">Create Account</button>
 
