--- a/info.html
+++ b/info.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="infostyle.css"/>
+    <script type = "module" defer src="datastore.js"></script>
     <title>Document</title>
 </head>
 <body>
 
+    <nav id="nav">
+        <p id="navtitle">MyTasks</p>
+    </nav>
     
+    <div id="createback">
+<p id="namefirst">First Name</p>
+<input id="firstname" type = "text">
+<p id="namelast" Last Name</p>
+<input id="lastname" type = "text">
+<p id="namelast" Age</p>
+<input id="lastname" type = "number">
+<button id="finalinfo" type="submit">Finish</button>
+
+    </div>
     
 </body>
 </html>
