--- a/info.html
+++ b/info.html
@@ -14,12 +14,13 @@
     </nav>
     
     <div id="createback">
+        <p id="cretitle">Account Info</p>
 <p id="namefirst">First Name</p>
-<input id="firstname" type = "text">
-<p id="namelast" Last Name</p>
-<input id="lastname" type = "text">
-<p id="namelast" Age</p>
-<input id="lastname" type = "number">
+<input id="firstname" type = "text" placeholder="First Name">
+<p id="namelast">Last Name</p>
+<input id="lastname" type = "text" placeholder="Last Name">
+<p id="agep">Age</p>
+<input id="age" type="number">
 <button id="finalinfo" type="submit">Finish</button>
 
     </div>
