--- a/info.html
+++ b/info.html
@@ -21,7 +21,7 @@
 <input id="lastname" type = "text" placeholder="Last Name">
 <p id="agep">Age</p>
 <input id="age" type="number">
-<button id="finalinfo" type="submit">Finish</button>
+<button id="finalinfo" type="submit" onclick="addData(first, last, age, user)">Finish</button>
 
     </div>
     
