--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 
     <nav id="sidenav">
         <button id="create">Create New List +</button>
+        <img id="setbut" src="imgs/setbut.png">
 
     </nav>
 
