--- a/main.html
+++ b/main.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
+    <script src="controller.js"></script>
     <title>TO-DO-List</title>
 </head>
 <body>
 
     <nav id="sidenav">
-        <button id="create">Create New List +</button>
+        <button id="create" onclick="duplicate()">Create New List +</button>
         <img id="setbut" src="imgs/setbut.png">
+        <p id="firstnamedisplay">Preston</p>
+        <p id="lastnamedisplay">Messina</p>
+        <img id="pfp">
 
     </nav>
+
+  
+<div id="page">
+   dupe all of dis 
+</div>
+
+
+
+
+
+
+    
 
    
     
