--- a/main.html
+++ b/main.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
     <script src="controller.js"></script>
-    <title>TO-DO-List</title>
+    <title>MyTask</title>
+    <link rel="icon" type="image/x-icon" href="imgs/Screenshot 2024-08-10 185618.jpg">
 </head>
 <body>
 
     <nav id="sidenav">
         <button id="create" onclick="duplicate()">Create New List +</button>
+        <a href="settings/settings.html">
         <img id="setbut" src="imgs/setbut.png">
+        </a>
         <p id="firstnamedisplay">Preston</p>
         <p id="lastnamedisplay">Messina</p>
         <img id="pfp">
