--- a/settings.html
+++ b/settings.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="settingsstyle.css"/>
+    <title>Settings</title>
+    <link rel="icon" type="image/x-icon" href="imgs/Screenshot 2024-08-10 185618.jpg">
 </head>
 <body>
+
+    <div id="setback">
+
+        <p id="settitle">Account Settings</p>
+        <p id="General Info"
+        <p id="first">First Name</p>
+        <p id="firstname">Preston</p>
+        <p id="lastname">Messina</p>
+        <p id="email">preston.messina@outlook.com</p>
+        <p id="password">********</p>
+        <button id="changpass">Change Password</button>
+
+
+    </div>
     
 </body>
 </html>
