--- a/settings.html
+++ b/settings.html
@@ -14,6 +14,7 @@
         <p id="settitle">Account Settings</p>
         <p id="General Info"
         <p id="first">First Name</p>
+        ]<p id="last">Last Name</p>
         <p id="firstname">Preston</p>
         <p id="lastname">Messina</p>
         <p id="email">preston.messina@outlook.com</p>
