--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <script src="controller.js"></script>
     <title>MyTask</title>
     <link rel="icon" type="image/x-icon" href="imgs/Screenshot 2024-08-10 185618.jpg">
+    <script type = "module" defer src="login.js"></script>
 </head>
 <body>
 
