--- a/settings.html
+++ b/settings.html
@@ -12,13 +12,15 @@
     <div id="setback">
 
         <p id="settitle">Account Settings</p>
-        <p id="General Info"
+        <p id="General Info"></p>
         <p id="first">First Name</p>
-        ]<p id="last">Last Name</p>
+        <p id="last">Last Name</p>
         <p id="firstname">Preston</p>
         <p id="lastname">Messina</p>
+        <p id="emailtext">Email</p>
         <p id="email">preston.messina@outlook.com</p>
-        <p id="password">********</p>
+        <p id="passwordtext">Password</p>
+        <p id="password">***********</p>
         <button id="changpass">Change Password</button>
 
 
