--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
     <nav id="sidenav">
         <button id="create" onclick="duplicate()">Create New List +</button>
-        <a href="settings/settings.html">
+        <a href="settings.html">
         <img id="setbut" src="imgs/setbut.png">
         </a>
         <p id="firstnamedisplay">Preston</p>
