--- a/settings.html
+++ b/settings.html
@@ -22,7 +22,11 @@
         <p id="passwordtext">Password</p>
         <p id="password">***********</p>
         <button id="changpass">Change Password</button>
-
+        <button id="delete">Delete Account </button>
+        <p id="warn">WARNING! deleting your account is permanent and cannot be done</p>
+<a href="main.html">
+        <button id="back">Back to Home</button>
+</a>
 
     </div>
     
