--- a/settings.html
+++ b/settings.html
@@ -23,10 +23,18 @@
         <p id="password">***********</p>
         <button id="changpass">Change Password</button>
         <button id="delete">Delete Account </button>
-        <p id="warn">WARNING! deleting your account is permanent and cannot be done</p>
+        <p id="warn">WARNING! deleting your account is permanent and cannot be undone</p>
 <a href="main.html">
         <button id="back">Back to Home</button>
 </a>
+
+<p id="themes">Themes</p>
+<select id="selecthemes">
+    <option id="light">Light</option>
+    <option id="dark">Dark</option>
+    <option id="mid">Midnight</option>
+    <option id="original">Original</option>
+</select>
 
     </div>
     
