--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="imgs/Screenshot 2024-08-10 185618.jpg">
     <script type = "module" defer src="login.js"></script>
 </head>
-<body>
+<body id="mainbody">
 
     <nav id="sidenav">
         <button id="create" onclick="duplicate()">Create New List +</button>
@@ -24,7 +24,10 @@
 
   
 <div id="page">
-   dupe all of dis 
+   <div id="backtitle">
+
+    
+   </div>
 </div>
 
 
