--- a/settings.html
+++ b/settings.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="settingsstyle.css"/>
     <title>Settings</title>
     <link rel="icon" type="image/x-icon" href="imgs/Screenshot 2024-08-10 185618.jpg">
+    <script type = "module" defer src="login.js"></script>
 </head>
-<body>
+<body id="setbody">
 
     <div id="setback">
 
@@ -18,7 +19,7 @@
         <p id="firstname">Preston</p>
         <p id="lastname">Messina</p>
         <p id="emailtext">Email</p>
-        <p id="email">preston.messina@outlook.com</p>
+        <p id="email">N/A</p>
         <p id="passwordtext">Password</p>
         <p id="password">***********</p>
         <button id="changpass">Change Password</button>
@@ -35,6 +36,8 @@
     <option id="mid">Midnight</option>
     <option id="original">Original</option>
 </select>
+
+<button id="logout">Logout</button>
 
     </div>
     
