--- a/home.html
+++ b/home.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="homestyle.css"/>
+    <title>Home</title>
 </head>
 <body>
+
+    <nav id="homenav">
+        <p id="navtitle">MyTask</p>
+        <a href="login.html">
+        <button id="login">Login</button>
+        </a>
+    </nav>
     
 </body>
 </html>
