--- a/home.html
+++ b/home.html
@@ -13,7 +13,15 @@
         <a href="login.html">
         <button id="login">Login</button>
         </a>
+        <a href="https://github.com/presigues">
+            <button id="credits">Credits</button>
+            </a>
+            <a href="">
+                <button id="about">About</button>
+                </a>
     </nav>
+
+    <p id="welcome">Welcome to MyTask</p>
     
 </body>
 </html>
