--- a/home.html
+++ b/home.html
@@ -20,8 +20,15 @@
                 <button id="about">About</button>
                 </a>
     </nav>
+    <section id="abouts">
 
     <p id="welcome">Welcome to MyTask</p>
-    
+
+    <p id="info1">Create Projects and Tasks</p>
+
+    <p id="info2">Add priority and due dates to tasks</p>
+
+    <p id="info3">Organize your workflow</p>
+    </section>
 </body>
 </html>
