--- a/home.html
+++ b/home.html
@@ -29,6 +29,9 @@
     <p id="info2">Add priority and due dates to tasks</p>
 
     <p id="info3">Organize your workflow</p>
+<a href="signup/signup.html">
+    <button id="join">Join Today!</button>
+    </a>
     </section>
 </body>
 </html>
