--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="loginstyle.css"/>
-    <script type = "module" defer src="login.js"></script>
+    <script type = "module" defer src="register.js"></script>
 
 
 </head>
@@ -15,27 +15,15 @@
         <p id="navtitle">MyTasks</p>
     </nav>
     
-    <div id="createback">
+<div id="createback">
 <p id="cretitle">Login</p>
 <p id="emailtext">Email</p>
 <input id="email" type="text" placeholder="Email">
 <p id="passtext">Password</p>
 <input id="pass" type="password" placeholder="Password">
-
-<button id="submit" type="submit">Login</button>
-
-
-
-
-
+<button id="submit2" type="submit">Login</button>
 <p id="loginoki">Dont have an account? Sign up <a href="signup.html">Here</a></p>
-
-
-
-
-
-
-    </div>
+</div>
     
 </body>
 </html>
