--- a/register.html
+++ b/register.html
@@ -7,12 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="signstyle.css"/>
     <script type = "module" defer src="auth.js"></script>
-
+    
 
 </head>
 
 <body>
-
+<script src="thefunstuff.js"></script>
     <nav id="nav">
         <p id="navtitle">MyTasks</p>
     </nav>
