--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
     <nav id="homenav">
         <p id="navtitle">MyTask</p>
-        <a href="login.html">
+        <a href="register.html">
         <button id="login">Login</button>
         </a>
         <a href="https://github.com/presigues">
