--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
     <p id="info2">Add priority and due dates to tasks</p>
 
     <p id="info3">Organize your workflow</p>
-<a href="signup/signup.html">
+<a href="register.html">
     <button id="join">Join Today!</button>
     </a>
     </section>
