update / css stuff

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="homestyle.css"/>
-    <title>Home</title>
+    <title>MyTask.com</title>
 </head>
 <body>
 
@@ -22,9 +22,9 @@
     </nav>
     <section id="abouts">
 
-    <p id="welcome">Welcome to MyTask</p>
+    <p id="welcome">Where ideas meets action</p>
 
-    <p id="info1">Create Projects and Tasks</p>
+    <p id="info1">Organize your daily life to do your best work</p>
 
     <p id="info2">Add priority and due dates to tasks</p>
 
