--- a/home.html
+++ b/home.html
@@ -22,7 +22,10 @@
     </nav>
     <section id="abouts">
 
-    <p id="welcome">Where ideas meets action</p>
+    <p id="welcome1">Where</p>
+    <p id="welcome2">ideas</p>
+    <p id="welcome3">meet</p>
+    <p id="welcome4">action</p>
 
     <p id="info1">Organize your daily life to do your best work</p>
 
