--- a/home.html
+++ b/home.html
@@ -28,7 +28,9 @@
     <p id="welcome4">action</p>
 
     <p id="info1">Organize your daily life to do your best work</p>
-
+<a href="register.html">
+    <button id="try">Get Started For Free</button>
+</a>
     <p id="info2">Add priority and due dates to tasks</p>
 
     <p id="info3">Organize your workflow</p>
@@ -37,4 +39,4 @@
     </a>
     </section>
 </body>
-</html>
+</html> 
