--- a/home.html
+++ b/home.html
@@ -31,7 +31,11 @@
 <a href="register.html">
     <button id="try">Get Started For Free</button>
 </a>
-    <p id="info2">Add priority and due dates to tasks</p>
+    
+    </section>
+
+    <section id="infostuff">
+<p id="info2">Add priority and due dates to tasks</p>
 
     <p id="info3">Organize your workflow</p>
 <a href="register.html">
