--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <button id="login">Login</button>
         </a>
         <a href="https://github.com/presigues">
-            <button id="credits">Credits</button>
+            <img id="git" src="kindpng_1280233.png">
             </a>
             <a href="">
                 <button id="about">About</button>
@@ -35,7 +35,12 @@
     </section>
 
     <section id="infostuff">
-<p id="info2">Add priority and due dates to tasks</p>
+
+    </section>
+
+    <section id="infoinfo">
+        <p id="info2">Add priority and due dates to tasks</p>
+        <p id="infoinfo2">Set due dates to your tasks and get notifications for those dates</p>
 
     <p id="info3">Organize your workflow</p>
 <a href="register.html">
