--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="homestyle.css"/>
+    <link rel="icon" type="image/x-icon" href="imgs/logo.png">
     <title>MyTask.com</title>
 </head>
 <body>
@@ -42,10 +43,15 @@
         <p id="info2">Add priority and due dates to tasks</p>
         <p id="infoinfo2">Set due dates to your tasks and get notifications for those dates</p>
 
-    <p id="info3">Organize your workflow</p>
+    
 <a href="register.html">
     <button id="join">Join Today!</button>
     </a>
+    </section>
+
+    <section id="infoinfo1">
+<p id="info3">Organize your workflow, set subtasks and organize tasks into projects</p>
+
     </section>
 </body>
 </html> 
