--- a/register.html
+++ b/register.html
@@ -38,6 +38,20 @@ const analytics = getAnalytics(app);
 const auth = getAuth(app);
 const db = firebase.firestore();
     </script>
+
+    
+<nav id="homenav">
+    <p id="navtitle">MyTask</p>
+    <a href="register.html">
+    <button id="login">Login</button>
+    </a>
+    <a href="https://github.com/presigues">
+        <img id="git" src="kindpng_1280233.png">
+        </a>
+        <a href="">
+            <button id="about">About</button>
+            </a>
+</nav>
     
     <!-- SIGN UP -->
 <div id="createback">
