--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
 <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore.js"></script>
     <nav id="nav">
-        <p id="navtitle">MyTasks</p>
+        
     </nav>
 
     <script>
@@ -42,7 +42,9 @@ const db = firebase.firestore();
 
     
 <nav id="homenav">
+    <a href="home.html">
     <p id="navtitle">MyTask</p>
+    </a>
     <a href="register.html">
     <button id="login">Login</button>
     </a>
