--- a/home.html
+++ b/home.html
@@ -54,13 +54,13 @@
  <div id="panel1"></div>
 
  <div id="mainpanel1">
-
+<p id="explain1">Create Tasks and Projects</p>
  </div>
  <div id="mainpanel2">
-    
+    <p id="explain2">Set Prority and Due Dates to those tasks</p>
  </div>
  <div id="mainpanel3">
-    
+    <p id="explain3">Get notified and improve your workflow</p>
  </div>
     </section>
 
