--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <a href="https://github.com/presigues">
             <img id="git" src="kindpng_1280233.png">
             </a>
-            <a href="">
+            <a href="about.html">
                 <button id="about">About</button>
                 </a>
     </nav>
