--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@ const db = firebase.firestore();
     <a href="https://github.com/presigues">
         <img id="git" src="kindpng_1280233.png">
         </a>
-        <a href="">
+        <a href="about.html">
             <button id="about">About</button>
             </a>
 </nav>
