--- a/about.html
+++ b/about.html
@@ -22,5 +22,12 @@
                 <button id="about">About</button>
                 </a>
     </nav>
+
+    <section id="abouts">
+
+        <div id="aboutbacking"></div>
+
+        <p id="info1">MyTask is created for your productivity</p>
+    </section>
 </body>
 </html>
