--- a/about.html
+++ b/about.html
@@ -28,6 +28,9 @@
         <div id="aboutbacking"></div>
 
         <p id="info1">MyTask is created for your productivity</p>
+
+        <p id="info2">With MyTask, creating projects and task is easier than ever</p>
+          <p id="info3">Create goals for you are your team and set dates in order to</p>
     </section>
 </body>
 </html>
