--- a/main.html
+++ b/main.html
@@ -23,12 +23,9 @@
     </nav>
 
   
-<div id="page">
-   <div id="backtitle">
-
-    
-   </div>
-</div>
+<section id="welcomepage">
+   <div id="backtitle"></div>
+</section>
 
 
 
