--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyTask.com</title>
-    <link rel="stylesheet" href="aboutstyle.css"/>
+    <link rel="stylesheet" href="style/aboutstyle.css"/>
     <link rel="icon" type="image/x-icon" href="imgs/logo.png">
 </head>
 <body>
