--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style/style.css"/>
     <script src="controller.js"></script>
     <title>MyTask</title>
     <link rel="icon" type="image/x-icon" href="imgs/Screenshot 2024-08-10 185618.jpg">
@@ -25,6 +25,10 @@
   
 <section id="welcomepage">
    <div id="backtitle"></div>
+
+   <p id="welcomeok">Hello, Name Here</p>
+
+   <p id="tut1">Create a new Project by clicking the button on the left</p>
 </section>
 
 
