--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyTask.com</title>
-    <link rel="stylesheet" href="signstyle.css"/>
+    <link rel="stylesheet" href="style/signstyle.css"/>
     <link rel="icon" type="image/x-icon" href="imgs/logo.png">
     
     
