--- a/settings.html
+++ b/settings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="settingsstyle.css"/>
+    <link rel="stylesheet" href="style/settingsstyle.css"/>
     <title>Settings</title>
     <link rel="icon" type="image/x-icon" href="imgs/Screenshot 2024-08-10 185618.jpg">
     <script type = "module" defer src="login.js"></script>
