--- a/main.html
+++ b/main.html
@@ -29,6 +29,8 @@
    <p id="welcomeok">Hello, Name Here</p>
 
    <p id="tut1">Create a new Project by clicking the button on the left</p>
+
+   <p id="tut2">Click "Add Task" to a create a task for a project</p>
 </section>
 
 
