--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@ const db = firebase.firestore();
     <button id="login">Login</button>
     </a>
     <a href="https://github.com/presigues">
-        <img id="git" src="kindpng_1280233.png">
+        <img id="git" src="imgs/kindpng_1280233.png">
         </a>
         <a href="about.html">
             <button id="about">About</button>
