--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <button id="login">Login</button>
         </a>
         <a href="https://github.com/presigues">
-            <img id="git" src="kindpng_1280233.png">
+            <img id="git" src="imgs/kindpng_1280233.png">
             </a>
             <a href="about.html">
                 <button id="about">About</button>
