--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style/homestyle.css"/>
     <link rel="icon" type="image/x-icon" href="imgs/logo.png">
     <title>MyTask.com</title>
+    <script type = "module" defer src="js/auth.js"></script>
 </head>
 <body>
 
