--- a/register.html
+++ b/register.html
@@ -36,20 +36,11 @@
 
 <button id="submit" type="submit">Create Account</button>
 <p id="loginoki">Already have an account? Login </p>
-<button id="here1" onclick="tosign()">Here</button>
+<a href="login.html">
+<button id="here1">Here</button>
+</a>
 </div>
 
-<!-- LOG IN -->
-<div id="createbacklog">
-    <p id="cretitlelog">Login</p>
-    <p id="emailtextlog">Email</p>
-    <input id="emaillog" type="text" placeholder="Email">
-    <p id="passtextlog">Password</p>
-    <input id="passlog" type="password" placeholder="Password">
-    <button id="submit2" type="submit">Login</button>
-    <p id="loginokilog">Dont have an account? Sign up </p>
-        <button id="here2" onclick="tolog()">Here</button>
-    </div>
     
 </body>
 </html>
