--- a/info.html
+++ b/info.html
@@ -3,16 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="infostyle.css"/>
-    <script type = "module" defer src="datastore.js"></script>
     <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="imgs/logo.png">
+    <script type = "module" defer src="js/login.js"></script>
+    <script src="js/thefunstuff.js"></script>
+    <link rel="stylesheet" href="style/signstyle.css"/>
 </head>
 <body>
 
-    <nav id="nav">
-        <p id="navtitle">MyTasks</p>
+    <nav id="homenav">
+        <a href="home.html">
+        <p id="navtitle">MyTask</p>
+        </a>
+        <a href="register.html">
+        <button id="login">Login</button>
+        </a>
+        <a href="https://github.com/presigues">
+            <img id="git" src="imgs/kindpng_1280233.png">
+            </a>
+            <a href="about.html">
+                <button id="about">About</button>
+                </a>
     </nav>
-    
+
     <div id="createback">
         <p id="cretitle">Account Info</p>
 <p id="namefirst">First Name</p>
