--- a/login.html
+++ b/login.html
@@ -25,12 +25,12 @@
                 <button id="about">About</button>
                 </a>
     </nav>
-    
+
     <!-- LOG IN -->
 <div id="createbacklog">
     <p id="cretitlelog">Login</p>
     <p id="emailtextlog">Email</p>
-    <input id="emaillog" type="text" placeholder="Email">
+    <input id="emaillog" type="email" placeholder="Email">
     <p id="passtextlog">Password</p>
     <input id="passlog" type="password" placeholder="Password">
     <button id="submit2" type="submit">Login</button>
