--- a/info.html
+++ b/info.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="imgs/logo.png">
     <script type = "module" defer src="js/login.js"></script>
     <script src="js/thefunstuff.js"></script>
-    <link rel="stylesheet" href="style/signstyle.css"/>
+    <link rel="stylesheet" href="style/infostyle.css"/>
 </head>
 <body>
 
@@ -34,7 +34,7 @@
 <input id="lastname" type = "text" placeholder="Last Name">
 <p id="agep">Age</p>
 <input id="age" type="number">
-<button id="finalinfo" type="submit" onclick="addData(first, last, age, user)">Finish</button>
+<button id="finalinfo" type="submit">Finish</button>
 
     </div>
     
